force-app/main/default/objects/RiverId_Polls__c/RiverId_Polls__c.object-meta.xml
<CustomObject>
    <label>RiverId Poll</label>
    <nameField>
        <displayFormat>RiverIdPol-{0000000}</displayFormat>
        <label>RiverId Polls Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RiverId Polls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>