force-app/main/default/objects/RiverId_Polls__c/fields/Abonos__c.field-meta.xml
<CustomField>
    <fullName>Abonos__c</fullName>
    <label>Abonos</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>