force-app/main/default/objects/RiverId_Polls__c/fields/Beneficios__c.field-meta.xml
<CustomField>
    <fullName>Beneficios__c</fullName>
    <label>Beneficios</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>