force-app/main/default/objects/RiverId_Polls__c/fields/Estadio__c.field-meta.xml
<CustomField>
    <fullName>Estadio__c</fullName>
    <label>Estadio</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>