force-app/main/default/objects/RiverId_Polls__c/fields/Fecha_Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Respuesta__c</fullName>
    <label>Fecha Respuesta</label>
    <type>DateTime</type>
</CustomField>