force-app/main/default/objects/RiverId_Polls__c/fields/Futbol__c.field-meta.xml
<CustomField>
    <fullName>Futbol__c</fullName>
    <label>Futbol</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>