force-app/main/default/objects/RiverId_Polls__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <label>Guid</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>