force-app/main/default/objects/RiverId_Polls__c/fields/Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Instalaciones__c</fullName>
    <label>Instalaciones</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>