force-app/main/default/objects/RiverId_Polls__c/fields/River_Name__c.field-meta.xml
<CustomField>
    <fullName>River_Name__c</fullName>
    <label>River Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>