force-app/main/default/objects/RiverId_Polls__c/fields/RiverId_SFID__c.field-meta.xml
<CustomField>
    <fullName>RiverId_SFID__c</fullName>
    <label>RiverId_SFID</label>
    <referenceTo>RiverId__c</referenceTo>
    <relationshipLabel>RiverId Polls</relationshipLabel>
    <relationshipName>RiverId_Polls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>