force-app/main/default/objects/RiverId_Polls__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RiverId_SFID__c</columns>
    <columns>guid__c</columns>
    <columns>Fecha_Respuesta__c</columns>
    <columns>Token__c</columns>
    <columns>Beneficios__c</columns>
    <columns>Abonos__c</columns>
    <columns>Estadio__c</columns>
    <columns>Futbol__c</columns>
    <columns>Instalaciones__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>